make sure text is centered on tablets as well

--- a/app/styles/components/_explanation-showcase.scss
+++ b/app/styles/components/_explanation-showcase.scss
@@ -131,7 +131,7 @@
   &--centered-small {
     text-align: center;
 
-    @media #{$xs-up} {
+    @media #{$md-up} {
       text-align: left;
     }
   }
